--- a/index.css
+++ b/index.css
@@ -16,6 +16,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 5vw;
+}
+
+.project {
+  margin: 0 5vw;
 }
 
 h1 {
