--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 :root {
   --dark-color: #121212;
   --second-dark-color: #333;
-  --theme-color: rgb(247, 216, 38);
+  --theme-color: rgb(68, 216, 0);
   --light-color: #eee;
 }
 
@@ -9,7 +9,7 @@ body {
   margin: 0;
   background-color: var(--dark-color);
   color: var(--light-color);
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: 'Nanum Pen Script', cursive;
 }
 
 .home {
@@ -24,7 +24,8 @@ body {
 }
 
 h1 {
-  font-size: 8vw;
+  font-size: 3em;
+  text-align: center;
   text-shadow: 0px 0px 10px var(--theme-color);
 }
 
@@ -58,4 +59,8 @@ a {
 
 li {
   list-style: none;
+}
+
+small {
+  font-size: .5em;
 }
