--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,12 @@
+:root {
+  --dark-color: #333;
+  --light-color: rgba(255, 255, 255, 0.945);
+  --theme-color: rgba(0, 255, 221, 1);
+}
+
 body{
+  color: var(--light-color);
+  background-color: var(--dark-color);
   margin: 3rem 5vw;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -14,10 +22,12 @@ header li {
 }
 
 header a {
+  color: inherit;
   text-decoration: none;
 }
 
 main h1 {
+  color: var(--theme-color);
   text-align: left;
   font-size: 12vw;
 }
