--- a/public/style.css
+++ b/public/style.css
@@ -1,19 +1,18 @@
 :root {
-  --dark-color: #333;
-  --light-color: rgba(255, 255, 255, 0.945);
-  --theme-color: rgba(0, 255, 221, 1);
+  --theme-color: #21e0e0ec;
 }
 
 body{
-  color: var(--light-color);
-  background-color: var(--dark-color);
-  margin: 3rem 5vw;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  margin: 3rem 5vw;
 }
 
 header, header ul {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 header li {
