--- a/public/style.css
+++ b/public/style.css
@@ -23,6 +23,10 @@ li {
   margin-right: 20px;
 }
 
+li:hover {
+  color: var(--theme-color);
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -34,12 +38,35 @@ main h1 {
   font-size: 12vw;
 }
 
+form {
+  margin: 40px 0;
+  padding: 20px 0;
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+}
+
 textarea,
 input {
+  min-width: 350px;
+  max-width: 500px;
+  padding: 10px;
+  margin: 10px 0px 20px 0px;
   color: var(--text-color);
   background-color: var(--bg-color);
-  border: none;
+  border: 2px solid var(--theme-color);
+  border-radius: 6px;
   width: 100%;
+}
+
+form  button {
+  min-width: 200px;
+  max-width: 300px;
+  padding: 10px;
+  margin-top: 10px;
+  border: none;
+  border-radius: 100px;
+  background-color: var(--theme-color);
 }
 
 footer {
@@ -47,10 +74,12 @@ footer {
 }
 
 .cards {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .card {
-  width: 50%;
+  width: 40%;
   padding: 10px;
   margin: 10px;
   border: 2px solid var(--theme-color);
