theme button set

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -17,6 +17,12 @@ body
       @include flex-container()
     ul
       @include ul-style()
+      li
+        button
+          background: none
+          border: none
+          &:hover
+            cursor: pointer
 
   main
     h1
