main.sass enhanced

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -33,7 +33,7 @@ body
   article
     #projects
       .cards
-        @include flex-container('', '')
+        @include flex-container(none, none)
         flex-wrap: wrap
         .card
           width: 40%
