--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -12,7 +12,7 @@ body
   color: var(--text-color)
   margin: 3rem 5vw
 
-  header
+header
     &
       @include flex-container()
     ul
@@ -24,53 +24,68 @@ body
           &:hover
             cursor: pointer
 
-  main
-    h1
-      color: var(--theme-color)
-      text-align: left
-      font-size: 12vw
 
-  article
-    #projects
-      .cards
-        @include flex-container(none, none)
-        .card
-          width: 40%
-          padding: 10px
-          margin: 10px
-          border: 2px solid var(--theme-color)
-          border-radius: 6px
-    // #expeience
-    // #skills
-    #contact
-      form
-        margin: 40px 0
-        padding: 20px 0
-        display: grid
-        justify-content: center
-        justify-items: center
+h1
+  color: var(--theme-color)
+  text-align: left
+  font-size: 12vw
 
-        textarea, input
-          min-width: 350px
-          max-width: 500px
-          padding: 10px
-          margin: 10px 0px 20px 0px
-          color: var(--text-color)
-          background-color: var(--bg-color)
-          border: 2px solid var(--theme-color)
-          border-radius: 6px
-          width: 100%
+.project-cards
+  @include flex-container(none, none)
+  .project-card
+    width: 40%
+    min-width: max-content
+    padding: 10px
+    margin: 10px
+    border: 2px solid var(--theme-color)
+    border-radius: 6px
 
-        button
-          min-width: 200px
-          max-width: 300px
-          padding: 10px
-          margin-top: 10px
-          border: none
-          border-radius: 100px
-          background-color: var(--theme-color)
 
-  footer
-    text-align: center
-    ul
-      @include ul-style()
+.experience-card
+  display: grid
+  gap: 0px 20px
+  grid-template-columns: auto 10px auto
+  justify-content: center
+
+.vertical-line
+  margin: 0
+  padding: 0
+  width: 3px
+  background: var(--text-color)
+
+
+  
+// #expeience
+// #skills
+
+
+#contact
+  form
+    margin: 40px 0
+    padding: 20px 0
+    display: grid
+    justify-content: center
+    justify-items: center
+    textarea, input
+      min-width: 350px
+      max-width: 500px
+      padding: 10px
+      margin: 10px 0px 20px 0px
+      color: var(--text-color)
+      background-color: var(--bg-color)
+      border: 2px solid var(--theme-color)
+      border-radius: 6px
+      width: 100%
+    button
+      min-width: 200px
+      max-width: 300px
+      padding: 10px
+      margin-top: 10px
+      border: none
+      border-radius: 100px
+      background-color: var(--theme-color)
+
+footer
+  text-align: center
+  ul
+    @include ul-style()
