vannila to react

--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@
 body {
   background-color: var(--theme-color);
   margin: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: monospace;
 }
 
 article {
